--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                       <li><a href="https://www.facebook.com/iamnihalsahupersonal"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="https://twitter.com/iamnihalsahu"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.instagram.com/iamnihalsahu"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="info-text">
-                <a href="https://www.instagram.com/iamnihalsahu"><h3>Nihal Sahu</h3></a>
+                <a href="#"><h3>Nihal Sahu</h3></a>
                 <p>Administrator, Scripta Foundation</p>
               </div>
             </div>
@@ -322,7 +322,7 @@
                       <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="https://twitter.com/noufalibrahim"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="https://www.linkedin.com/in/noufalibrahim"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                      
                     </ul>
                   </div>
                 </div>
@@ -521,7 +521,7 @@
         </div>
         <div class="row justify-content-center mt-3">
           <div class="col-xs-12">
-            <a href="#" class="btn btn-common">Browse All</a>
+            <a href="https://www.instagram.com/_kaizen5_/" class="btn btn-common">Browse All</a>
           </div>
         </div>
       </div>
