--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Kaizen 6</title>
-    <!-- Town script -->
-    <script src="//www.townscript.com/popup-widget/townscript-widget.cocache.js:" type="text/javascript"></script>
- 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
     <!-- Icon -->
@@ -121,7 +118,6 @@
             <img class="d-block w-100" src="assets/img/slider/slide1.jpg" alt="First slide">
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s"><font color="black">see through the eyes of innovation</font></p> 
-
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s"><font color="black">KAIZEN VI</font></h1>
               <a href="#pricing" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register</a>
               <a href="#gallery" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Explore More</a>
@@ -149,7 +145,6 @@
             <img class="d-block w-100" src="assets/img/slider/slide4.jpg" alt="Fourth slide">
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s"><font color="black">see through the eyes of innovation</font></p> 
-
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s"><font color="black">KAIZEN VI</font></h1>
               <a href="#pricing" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register</a>
               <a href="#gallery" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s"><font color="pink">Explore More</font></a>
@@ -193,7 +188,7 @@
         <div class="row text-center">
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="heading-count">
-              <h2 class="wow fadeInDown" data-wow-delay="0.2s">JOIN US!</h2>
+              <h2 class="section-title wow fadeInDown" data-wow-delay="0.2s">JOIN US!</h2>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
@@ -224,12 +219,7 @@
           </div>
         </div>
        <div class="row">
-            <!--<div class="about-item">
-            <img class="img-fluid" src="assets/img/about/img1.jpg" alt="">-->
-              
-
                 <p align="center">Kaizen is a culmination of technology, innovation, culture and humanity. Each edition promises just this. Boasting a plethora of speakers, workshops, technical events and other cultural events, Kaizen is sure to strike a chord inside everyone standing testimony to it.</p>
-       
         </div>
       </div>
     </section>
@@ -305,7 +295,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <a href="#"><h3>Nihal Sahu</h3></a>
+		      <h3><a href="#team">Nihal Sahu</a></h3>
                 <p>Administrator, Scripta Foundation</p>
               </div>
             </div>
@@ -328,7 +318,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Noufal Ibrahim</a></h3>
+                <h3><a href="#team">Noufal Ibrahim</a></h3>
                 <p>Founder, PyCon India</p>
               </div>
             </div>
@@ -643,7 +633,7 @@
               <li>Mukil Menon</li>
               <li>Vice-chairman, IEEE SB CEM</li>
               <li>menonmukil@gmail.com</li>
-	      <li>+91 7869132001</li>
+	      <li>+91 8075543060</li>
             </ul></font>
             </div>
             <!-- /.widget -->
