--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 	<div class="col-sm-6 col-md-6 col-lg-6">
             <div class="price-block-wrapper wow fadeInLeft" data-wow-delay="0.2s">
               <div class="icon">
-                <i class="lni-layers"></i>
+                <i class="lni-wallet"></i>
               </div>
               <div class="colmun-title">
                 <h5>IEEE</h5>
@@ -555,7 +555,7 @@
 <div class="col-sm-6 col-md-6 col-lg-6">
             <div class="price-block-wrapper wow fadeInRight" data-wow-delay="0.4s">
               <div class="icon">
-                <i class="lni-leaf"></i>
+                <i class="lni-wallet"></i>
               </div>
               <div class="colmun-title">
                 <h5>Non-IEEE</h5>
