--- a/index.html
+++ b/index.html
@@ -196,9 +196,8 @@
               <div id="clock" class="time-count"></div>
             </div>
           
-<a href="http://add.eventable.com/events/5c35122e3c5b9a007d6387e8/5c3512313c5b9a007d6387ef/" class="eventable-link" target="_blank" data-key="5c35122e3c5b9a007d6387e8" data-event="5c3512313c5b9a007d6387ef" data-style="3" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s"> >Add to My Calender</a>
+<a href="http://add.eventable.com/events/5c35122e3c5b9a007d6387e8/5c35e566f4bcc1001b119ee4/" class="eventable-link" target="_blank" data-key="5c35122e3c5b9a007d6387e8" data-event="5c35e566f4bcc1001b119ee4" data-style="3">Add to Calendar</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://plugins.eventable.com/eventable.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script', 'eventable-script');</script>
-
           </div>
         </div>
       </div>
