--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
               <style>.heart{color:#e25555;}</style>
 Made with <span class="heart">❤</span> at IEEE-CEM SB
 
-              <p>© Designed and Developed by <i class=".lni-heart-pulse"></i><a href="https://facebook.com/naviknair" rel="nofollow">NavNet</a></p>
+              <p>© Designed and Developed by <i class=".lni-heart-pulse"></i><a href="https://facebook.com/naviknair" rel="nofollow">Navaneeth</a></p>
             </div>      
           </div>
         </div>
