--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         </div>
         <div class="row justify-content-center mt-3">
           <div class="col-xs-12">
-            <a href="https://www.instagram.com/_kaizen5_/" class="btn btn-common">Browse All</a>
+            <a href="https://www.instagram.com/_kaizen6_/" class="btn btn-common">Browse All</a>
           </div>
         </div>
       </div>
@@ -527,7 +527,7 @@
           <div class="col-12">
             <div class="section-title-header text-center">
               <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Our Pricing</h1>
-              <p class="wow fadeInDown" data-wow-delay="0.2s">Kaizen 6.0</p>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">Kaizen VI</p>
             </div>
           </div>
         </div>
