--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <i class="lni-wallet"></i>
               </div>
               <div class="colmun-title">
-                <h5>IEEE</h5>
+		      <h5><font color="#ffffff">IEEE</font></h5>
               </div>
               <div class="price">
                 <h2>₹ 2500</h2>
@@ -557,7 +557,7 @@
                 <i class="lni-wallet"></i>
               </div>
               <div class="colmun-title">
-                <h5>Non-IEEE</h5>
+		    <h5><font color="#ffffff">Non-IEEE</font></h5>
               </div>
               <div class="price">
                 <h2>₹ 2900</h2>
