--- a/index.html
+++ b/index.html
@@ -324,33 +324,32 @@
             <!-- Team Item Ends -->
        </div>
 
-          <!--<div class="col-sm-6 col-md-6 col-lg-6">-->
+          <div class="col-sm-6 col-md-6 col-lg-6">
             <!-- Team Item Starts -->
-<!--            <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
+<div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
-                <img class="img-fluid" align="right" src="assets/img/team/team-02.jpg" width="250" height="350" alt="">
+                <img class="img-fluid" align="right" src="assets/img/team/team-03.jpg" width="250" height="350" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
                       <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Noufal Ibrahim</a></h3>
-                <p>xxxxxxxx</p>
+                <h3><a href="#">Niyog Krishna</a></h3>
+                <p>Adventurer, Social Worker</p>
               </div>
             </div>
             <!-- Team Item Ends -->
-      <!--  </div>-->
+      </div>
 
-          <!--<div class="col-sm-6 col-md-6 col-lg-4">-->
+         <div class="col-sm-6 col-md-6 col-lg-6">
             <!-- Team Item Starts -->
-            <!--<div class="team-item wow fadeInUp" data-wow-delay="0.8s">
+            <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
               <div class="team-img">
                 <img class="img-fluid" src="assets/img/team/team-04.jpg" alt="">
                 <div class="team-overlay">
@@ -359,18 +358,17 @@
                       <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxx</a></h3>
-                <p>apple</p>
+                <h3><a href="#">Nagaraja Prakasam</a></h3>
+                <p>Angel Investor, Mentor</p>
               </div>
             </div>-->
             <!-- Team Item Ends -->
-         <!-- </div>-->
+         </div>
           <!--<div class="col-sm-6 col-md-6 col-lg-4">-->
             <!-- Team Item Starts -->
            <!-- <div class="team-item wow fadeInUp" data-wow-delay="1s">
