--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <h3><a href="#">Nagaraja Prakasam</a></h3>
                 <p>Angel Investor, Mentor</p>
               </div>
-            </div>-->
+            </div>
             <!-- Team Item Ends -->
          </div>
           <!--<div class="col-sm-6 col-md-6 col-lg-4">-->
