--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <!-- Team Item Starts -->
 <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
-                <img class="img-fluid" align="right" src="assets/img/team/team-03.jpg" width="250" height="350" alt="">
+                <img class="img-fluid" align="right" src="assets/img/team/team-03.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
