--- a/index.html
+++ b/index.html
@@ -414,9 +414,11 @@
               </div>
             </div>-->
             <!-- Team Item Ends -->
-          <!--</div>
+		 <!-- <a href="speakers.html" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">All Speakers</a>-->
+          <!--</div>-->
         </div>
-        <a href="speakers.html" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">All Speakers</a>
+      
+	      <a href="" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">Will be updated soon</a>
       </div>-->
     </section>
     <!-- Team Section End -->
