--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           <!--</div>-->
         </div>
       
-	      <a href="" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">Will be updated soon</a>
+	      <a href="#" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">Will be updated soon</a>
       </div>-->
     </section>
     <!-- Team Section End -->
