--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         </div>
       
 	      <a href="#" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">Will be updated soon</a>
-      </div>-->
+      </div>
     </section>
     <!-- Team Section End -->
 
