--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-img">
@@ -300,7 +300,7 @@
             </div>
             <!-- Team Item Ends -->
           </div>
-         <div class="col-sm-6 col-md-6 col-lg-6">
+         <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
            <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
@@ -324,7 +324,7 @@
             <!-- Team Item Ends -->
        </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-6">
+          <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
 <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
@@ -347,7 +347,7 @@
             <!-- Team Item Ends -->
       </div>
 
-         <div class="col-sm-6 col-md-6 col-lg-6">
+         <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
               <div class="team-img">
@@ -369,30 +369,30 @@
             </div>
             <!-- Team Item Ends -->
          </div>
-          <!--<div class="col-sm-6 col-md-6 col-lg-4">-->
+          <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
-           <!-- <div class="team-item wow fadeInUp" data-wow-delay="1s">
+           <div class="team-item wow fadeInUp" data-wow-delay="1s">
               <div class="team-img">
                 <img class="img-fluid" src="assets/img/team/team-05.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.facebook.com/anjali.chandran.902"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                     
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxxxxxxxx</a></h3>
-                <p>google</p>
+                <h3><a href="#">Anjali Chandran</a></h3>
+                <p>Women Entrepreneur, Founder at Impresa</p>
               </div>
             </div>-->
             <!-- Team Item Ends -->
-         <!-- </div>
-          <div class="col-sm-6 col-md-6 col-lg-4">-->
+         </div>
+         <!-- <div class="col-sm-6 col-md-6 col-lg-4">-->
             <!-- Team Item Starts -->
             <!--<div class="team-item wow fadeInUp" data-wow-delay="1.2s">
               <div class="team-img">
