--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Anjali Chandran</a></h3>
+                <h3><a href="http://impresa.in/">Anjali Chandran</a></h3>
                 <p>Women Entrepreneur, Founder at Impresa</p>
               </div>
             </div>-->
