--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@
                 <h3><a href="http://impresa.in/">Anjali Chandran</a></h3>
                 <p>Women Entrepreneur, Founder at Impresa</p>
               </div>
-            </div>-->
+            </div>
             <!-- Team Item Ends -->
          </div>
-         <!-- <div class="col-sm-6 col-md-6 col-lg-4">-->
+         <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
-            <!--<div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
               <div class="team-img">
                 <img class="img-fluid" src="assets/img/team/team-06.jpg" alt="">
                 <div class="team-overlay">
@@ -409,10 +409,11 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxxxxxxxxx</a></h3>
-                <p>details</p>
+                <h3><a href="#">Vivek K aka Vivekomon</a></h3>
+                <p>Business Development at SpringRole</p>
               </div>
-            </div>-->
+            </div>
+       </div>
             <!-- Team Item Ends -->
 		 <!-- <a href="speakers.html" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">All Speakers</a>-->
           <!--</div>-->
