--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxxxxx</a></h3>
-                <p>xxx</p>
+                <h3><a href="#">Chandra Vadhana</a></h3>
+                <p>Founder & Chief Mentor at Prayaana, Hieera Awardee at Empretec India</p>
               </div>
             </div>
             <!-- Team Item Ends -->
