--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxxx</a></h3>
-                <p>xxxxx</p>
+                <h3><a href="#"></a></h3>
+                <p></p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -480,7 +480,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">xxxxxxx</a></h3>
+                <h3><a href="#"></a></h3>
                 <p></p>
               </div>
             </div>
