--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.facebook.com/BiswasTharakath"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
                      
@@ -432,8 +432,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#"></a></h3>
-                <p></p>
+                <h3><a href="https://www.facebook.com/BiswasTharakath">Biswas Tharakath</a></h3>
+                <p>keralarescue.in</p>
               </div>
             </div>
             <!-- Team Item Ends -->
