--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               </div>
               <div class="info-text">
                 <h3><a href="#">Chandra Vadhana</a></h3>
-                <p>Founder & Chief Mentor at Prayaana, Hieera Awardee at Empretec India</p>
+                <p>Founder & Chief Mentor at Prayaana</p>
               </div>
             </div>
             <!-- Team Item Ends -->
